--- a/src/sass/component/_greeting.scss
+++ b/src/sass/component/_greeting.scss
@@ -6,7 +6,7 @@
     height: auto;
     @include font(4.0rem, 5.6rem, 600, normal);
     @include media-tablet{
-        min-width: 330px;
+        min-width: 240px;
         flex-direction: column;
         @include font(2.2rem, 3.0rem, 600, normal);
         text-align: center;
@@ -15,13 +15,18 @@
 
 .greeting{
     width: 50%;
+    text-align: right;
+    padding-right: 8px;
     @include media-tablet{
         width: 100%;
+        text-align: center;
+        padding-right: 0;
     }    
 }
 
 .name {
     width: 50%;
+    padding-left: 8px;
     text-align: left;
     @include font(4.0rem, 5.6rem, 600, normal);
     color: $color-light;
@@ -36,6 +41,8 @@
         width: 100%;
         @include font(3.0rem, 4.2rem, 600, normal);
         text-align: center;
+        padding-left: 0;
+        padding-top: 10px;
     }
 }
  
