--- a/src/style.scss
+++ b/src/style.scss
@@ -13,4 +13,5 @@
 // Components
 @import "./sass/component/slider";
 @import "./sass/component/greeting";
-@import "./sass/component/clock-date"
+@import "./sass/component/clock-date";
+@import "./sass/component/weather";
