feat: add weather-icon

--- a/src/sass/component/_weather.scss
+++ b/src/sass/component/_weather.scss
@@ -21,8 +21,10 @@
   }
   
   .weather-icon {
-    margin-top: 20px;
-    font-size: 100px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 30px!important;
+
   }
   
   .city {
