--- a/src/sass/abstract/_constant.scss
+++ b/src/sass/abstract/_constant.scss
@@ -1,4 +1,9 @@
 $color-light: white;
+$color-primary: #FF9900;
+$color-border: #D7D7D7;
+$color-tag: #E5E5E5;
+$color-violet: #7752BE;
+$color-overlay: rgba(80, 80, 80, 0.4);
 
 $content-width: 90%;
 $tablet-width: 768px;
