--- a/src/sass/abstract/_placeholders.scss
+++ b/src/sass/abstract/_placeholders.scss
@@ -10,3 +10,15 @@
     font-family: 'Poppins', Verdana, sans-serif;
 }
 
+%custom-scroll {
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 1px grey;
+    }
+    &::-webkit-scrollbar-thumb {
+      background:green;
+      border-radius: 10px;
+    }
+}
