--- a/src/sass/component/_to-do.scss
+++ b/src/sass/component/_to-do.scss
@@ -64,6 +64,8 @@
     margin-bottom: 8px;
     padding: 5px 10px;
     display: flex;
+    text-align: start;
+    flex-wrap: wrap;
     font-family: 'Poppins',sans-serif;
     font-size: 16px;
     font-weight: 400;}
