--- a/src/style.scss
+++ b/src/style.scss
@@ -17,4 +17,5 @@
 @import "./sass/component/greeting";
 @import "./sass/component/clock-date";
 @import "./sass/component/weather";
-@import "./sass/component/to-do"
+@import "./sass/component/to-do";
+@import "./sass/component/actions";
