--- a/src/sass/component/_to-do.scss
+++ b/src/sass/component/_to-do.scss
@@ -61,13 +61,13 @@
     border-bottom: 1px solid green;
     cursor: pointer;
     height: 50px;
-    margin-bottom: 8px;
-    padding: 5px 10px;
+    margin-bottom: 18px;
     display: flex;
     text-align: start;
     flex-wrap: wrap;
     font-family: 'Poppins',sans-serif;
     font-size: 16px;
+    align-items: center;
     font-weight: 400;}
 
 .task_value{
@@ -82,6 +82,7 @@
     height: 40px;
     width: 40px;
     background-color: #ffffff;
+    margin-bottom: 10px;
     right: 40px;
     position:absolute;
     transition: .3s;
@@ -103,6 +104,7 @@
     width: 40px;
     background-color: #ffffff;
     right: 0;
+    margin-bottom: 10px;
     position:absolute;
     transition: .3s;
     &_selected{
