--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -7,6 +7,7 @@ body{
     @extend %font-primary;
     min-width: 360px;
     min-height: 100vh;
+    height: 100%;
     color: $color-light;
     text-align: center;
     background: center/cover, rgba(0, 0, 0, 0.4);
