--- a/src/sass/component/_actions.scss
+++ b/src/sass/component/_actions.scss
@@ -1,11 +1,9 @@
 .todo{
     width: 100px;
-    height: 50px;
-    margin-bottom: 50px;
+    height: 40px;
     color: green;
     border-radius: 10px;
     border: none;
-    align-self: flex-end;
     background-repeat: no-repeat;
     background-color: transparent;
     background-color:rgb(255, 255, 255, 0.8);
@@ -22,4 +20,11 @@
         outline: 0;  
         transform: scale(1.1);
     }
+}
+
+.actions{
+    height: 15vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
