--- a/src/sass/abstract/_constant.scss
+++ b/src/sass/abstract/_constant.scss
@@ -1,5 +1,6 @@
 $color-light: white;
-$color-primary: #FF9900;
+$color-dapk: black;
+$color-primary: green;
 $color-border: #D7D7D7;
 $color-tag: #E5E5E5;
 $color-violet: #7752BE;
