--- a/src/sass/component/_actions.scss
+++ b/src/sass/component/_actions.scss
@@ -1,7 +1,7 @@
 .todo{
     width: 100px;
     height: 40px;
-    color: green;
+    color: $color-primary;
     border-radius: 10px;
     border: none;
     background-repeat: no-repeat;
