--- a/src/sass/component/_to-do.scss
+++ b/src/sass/component/_to-do.scss
@@ -3,39 +3,36 @@
     justify-content: space-between;
     padding-top: 70px;
 }
+
 .newtask_input{
     width: 75%;
     height: 45px;
     padding: 12px;
-    color: #111111;
-    font-weight: 500;
+    color: $color-dapk;
     position: relative;
     border-radius: 5px;
-    font-family: 'Poppins',sans-serif;
-    font-size: 16px;
-    border: 2px solid green;
+    @include font(1.6rem,2.0rem,500,normal);
+    border: 2px solid $color-primary;
 }
 
 .newtask_input:focus{
     outline: none;
-    border-color: green;
+    border-color: $color-primary;
 }
 
 .newtask_button{
     position: relative;
     padding: 0;
     float: right;
-    font-weight: 500;
-    font-size: 20px;
-    background-color: green;
+    @include font(1.6rem,2.0rem,500,normal);
+    background-color: $color-primary;
     border: none;
-    color: #ffffff;
+    color: $color-light;
     cursor: pointer;
     outline: none;
     width: 20%;
     height: 45px;
     border-radius: 5px;
-    font-family: 'Poppins',sans-serif;
     transition: .3s;
     &:hover{
         transform: scale(1.01);
@@ -45,43 +42,40 @@
     }
 }
 
-.tasks,
-.tasks-done{
+.tasks {
     border-radius: 10px;
     width: 100%;
     position: relative;
-    background-color: #ffffff;
+    background-color: $color-light;
     margin-top: 10px;
 }
 
 .task{
     overflow: hidden;
     width: 100%;
-    color: #111111;
-    border-bottom: 1px solid green;
+    color: $color-dapk;
+    border-bottom: 2px solid $color-primary;
     cursor: pointer;
     height: 50px;
     margin-bottom: 18px;
     display: flex;
     text-align: start;
     flex-wrap: wrap;
-    font-family: 'Poppins',sans-serif;
-    font-size: 16px;
+    @include font(1.6rem,2.0rem,400,normal);
     align-items: center;
-    font-weight: 400;}
+}
 
 .task_value{
-    font-family: 'Poppins',sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    color: #111111;
+    @include font(1.6rem,2.0rem,400,normal);
+    color: $color-dapk;
 }
+
 .done{
     background-image: url(/src/assets/icon/Done.svg);
     cursor: pointer;
     height: 40px;
     width: 40px;
-    background-color: #ffffff;
+    background-color: $color-light;
     margin-bottom: 10px;
     right: 40px;
     position:absolute;
@@ -102,7 +96,7 @@
     cursor: pointer;
     height: 40px;
     width: 40px;
-    background-color: #ffffff;
+    background-color: $color-light;
     right: 0;
     margin-bottom: 10px;
     position:absolute;
@@ -116,8 +110,8 @@
 }
 
 .return{
-    background-color:#111111;
-    color: #ffffff;
+    background-color:$color-dapk;
+    color: $color-light;
     border: none;
     cursor: pointer;
     outline: none;
@@ -129,10 +123,6 @@
 .text-decoration{
     text-decoration: line-through;
 	text-decoration-color: brown;
-}
-
-.return_text{
-    text-decoration: none;
 }
 
 .display-none{
