--- a/src/sass/component/_weather.scss
+++ b/src/sass/component/_weather.scss
@@ -4,10 +4,18 @@
   flex-direction: column;
   text-align: center;
   height: 25vh;
+  @include media-minheight{
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .weather-error {
   margin-top: -10px;
+  @include media-minheight{
+    margin-top: 0px;
+  }
 }
 
 .wind{
@@ -28,7 +36,6 @@
   padding-top: 10px;
   padding-bottom: 10px;
   font-size: 3.5rem!important;
-
 }
   
 .city {
@@ -53,4 +60,7 @@ hr {
   height: 1px;
   background-color:$color-light;
   border: 0;
+  @include media-minheight{
+    display: none;
+  }
 }
