--- a/src/sass/component/_weather.scss
+++ b/src/sass/component/_weather.scss
@@ -46,6 +46,9 @@
   border: 0;
   outline: 0;
   background-color: transparent;
+  @include media-minheight{
+    width: 20vh;
+  }
 }
   
 .city::placeholder {  
