--- a/src/sass/abstract/_constant.scss
+++ b/src/sass/abstract/_constant.scss
@@ -7,6 +7,8 @@ $color-violet: #7752BE;
 $color-overlay: rgba(80, 80, 80, 0.4);
 
 $content-width: 90%;
+$laptop-small-width: 1600px;
+$tablet-big-width: 1024px;
 $tablet-width: 768px;
 $mobile-big-width: 414px;
 $mobile-small-width: 320px;
