--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -18,8 +18,16 @@
     @media (max-width: $content-width) { @content;}
 }
 
+@mixin media-laptop-small {
+    @media (max-width: $laptop-small-width) { @content;}
+}
+
 @mixin media-tablet {
     @media (max-width: $tablet-width) { @content;}
+}
+
+@mixin media-tablet-big {
+    @media (max-width: $tablet-big-width) { @content;}
 }
 
 @mixin media-mobile {
