--- a/src/sass/component/_to-do.scss
+++ b/src/sass/component/_to-do.scss
@@ -63,6 +63,7 @@
     @include font(1.6rem,2.0rem,400,normal);
     align-items: center;
     word-break: break-all;
+    word-wrap:break-word;
     @include media-laptop-small{
         width: 83%;
     }
