--- a/src/sass/component/_actions.scss
+++ b/src/sass/component/_actions.scss
@@ -28,4 +28,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    @include media-minheight{
+        height: 10vh;
+    }
 }
