--- a/src/sass/component/_weather.scss
+++ b/src/sass/component/_weather.scss
@@ -4,18 +4,14 @@
   flex-direction: column;
   text-align: center;
   height: 25vh;
+  align-items: center;
   @include media-minheight{
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+      height: auto;
   }
 }
 
 .weather-error {
   margin-top: -10px;
-  @include media-minheight{
-    margin-top: 0px;
-  }
 }
 
 .wind{
@@ -46,9 +42,6 @@
   border: 0;
   outline: 0;
   background-color: transparent;
-  @include media-minheight{
-    width: 20vh;
-  }
 }
   
 .city::placeholder {  
@@ -63,7 +56,4 @@ hr {
   height: 1px;
   background-color:$color-light;
   border: 0;
-  @include media-minheight{
-    display: none;
-  }
 }
